fix text overflow and used mixin

--- a/frontend/src/app/modules/members/members-page/members-page.component.sass
+++ b/frontend/src/app/modules/members/members-page/members-page.component.sass
@@ -53,11 +53,9 @@ td
         justify-content: space-between
 
     .email
+        @include text-overflow-x-nowrap
         width: 100%
         height: 1rem
-        text-overflow: ellipsis
-        overflow-x: clip
-        white-space: nowrap
 
 .small-button
     box-shadow: none
